Fix pagination on mobile

--- a/src/resources/scss/components/elements/MapControl.scss
+++ b/src/resources/scss/components/elements/MapControl.scss
@@ -14,6 +14,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @media only screen and (max-width: #{$phones-big}){
+        right: 20px;
+    }
 }
 
 .map-control__pin {
